[package]
name = "steam_api_concurrent"
version = "0.1.0"
edition = "2021"
description = "concurrent requests to the steam api"
authors = ["cryeprecision#8008"]
repository = "https://github.com/cryeprecision/steam_api_concurrent"
readme = "README.md"
keywords = ["steam", "concurrent", "parallel", "api"]
include = ["src/", "README.md"]

[features]
friend_code = ["dep:md5", "dep:byteorder"]
user_search = ["dep:scraper"]

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "cookies"] } # make web-requests
serde = { version = "1.0.143", features = ["derive"] }            # seralization
serde_json = { version = "1.0.83" }                               # de-/serialize json data
log = { version = "0.4.17" }                                      # logging facade
pretty_env_logger = { version = "0.4.0" }                         # actual logging implementation
tokio = { version = "1.20.1", features = ["full"] }               # async runtime
futures = { version = "0.3.23" }                                  # concurrency helper
chrono = { version = "0.4.19", features = ["serde"] }             # time and date stuff
dotenv = { version = "0.15.0" }                                   # use .env file for config
md5 = { version = "0.7.0", optional = true }                      # used for friend_code feature
byteorder = { version = "1.4.3", optional = true }                # used for friend_code feature
pin-project = { version = "1.0.12" }                              # pinning for futures
thiserror = { version = "1.0.35" }                                # define custom errors
scraper = { version = "0.13.0", optional = true }                 # parse html
