[package]
name = "steam_api_concurrent"
version = "0.1.0"
edition = "2021"
description = "concurrent requests to the steam api"
authors = ["cryeprecision#8008"]
repository = "https://github.com/cryeprecision/steam_api_concurrent"
readme = "README.md"
keywords = ["steam", "concurrent", "parallel", "api"]
include = ["src/", "README.md"]

[features]
friend_code = ["dep:md5", "dep:byteorder"]
user_search = ["dep:scraper"]

[dependencies]
reqwest = { version = "0", features = ["json", "cookies"] } # make web-requests
serde = { version = "1", features = ["derive"] }            # seralization
serde_json = { version = "1" }                              # de-/serialize json data
tokio = { version = "1", features = ["full"] }              # async runtime
futures = { version = "0" }                                 # concurrency helper
chrono = { version = "0", features = ["serde"] }            # time and date stuff
dotenv = { version = "0" }                                  # use .env file for config
md5 = { version = "0", optional = true }                    # used for friend_code feature
byteorder = { version = "1", optional = true }              # used for friend_code feature
thiserror = { version = "1" }                               # define custom errors
scraper = { version = "0", optional = true }                # parse html
indicatif = { version = "0" }                               # progress bars
